--- a/index.html
+++ b/index.html
@@ -8,101 +8,161 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
         body { 
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); 
+            background: linear-gradient(135deg, #E8F4FD 0%, #F0E6FF 50%, #FFF0F5 100%); 
             min-height: 100vh; 
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
         .workout-card { 
-            background: rgba(255, 255, 255, 0.95); 
-            backdrop-filter: blur(10px); 
-            border-radius: 20px; 
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1);
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            background: rgba(255, 255, 255, 0.9); 
+            backdrop-filter: blur(15px); 
+            border-radius: 25px; 
+            box-shadow: 0 10px 40px rgba(200, 220, 240, 0.3);
+            border: 1px solid rgba(240, 245, 255, 0.8);
             margin-bottom: 20px;
         }
         .exercise-item { 
-            background: rgba(248, 249, 250, 0.8); 
-            border-radius: 15px; 
+            background: linear-gradient(145deg, #FDFEFE 0%, #F8F9FF 100%); 
+            border-radius: 20px; 
             margin-bottom: 15px; 
             padding: 20px; 
-            border: 1px solid rgba(0, 0, 0, 0.05);
+            border: 1px solid rgba(220, 230, 245, 0.5);
             transition: all 0.3s ease;
+            box-shadow: 0 3px 15px rgba(200, 220, 245, 0.2);
         }
         .exercise-item:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(180, 200, 235, 0.25);
+            background: linear-gradient(145deg, #FFFFFF 0%, #F5F7FF 100%);
+        }
+        .exercise-image {
+            width: 60px;
+            height: 60px;
+            object-fit: cover;
+            border-radius: 15px;
+            border: 2px solid rgba(200, 220, 245, 0.3);
+            margin-right: 15px;
+            box-shadow: 0 2px 8px rgba(180, 200, 235, 0.2);
         }
         .weight-input { 
             width: 80px; 
-            border-radius: 10px; 
-            border: 2px solid #e9ecef;
+            border-radius: 15px; 
+            border: 2px solid #E1E8F0;
             transition: border-color 0.3s ease;
+            background: rgba(250, 252, 255, 0.8);
         }
         .weight-input:focus {
-            border-color: #667eea;
-            box-shadow: 0 0 0 0.2rem rgba(102, 126, 234, 0.25);
+            border-color: #B8D4F0;
+            box-shadow: 0 0 0 0.2rem rgba(184, 212, 240, 0.25);
+            background: #FFFFFF;
         }
         .btn-primary { 
-            background: linear-gradient(45deg, #667eea, #764ba2); 
+            background: linear-gradient(45deg, #B8D4F0, #D1C4E9); 
             border: none; 
-            border-radius: 25px; 
+            border-radius: 20px; 
             font-weight: 600;
+            color: #4A5568;
             transition: all 0.3s ease;
         }
         .btn-primary:hover { 
             transform: translateY(-1px); 
-            box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+            box-shadow: 0 6px 20px rgba(184, 212, 240, 0.4);
+            background: linear-gradient(45deg, #A5C9EA, #C8B7E3);
+            color: #2D3748;
         }
         .nav-pills .nav-link {
-            border-radius: 25px;
-            margin: 0 5px;
+            border-radius: 20px;
+            margin: 0 8px;
             font-weight: 600;
             transition: all 0.3s ease;
+            color: #6B7280;
+            background: rgba(255, 255, 255, 0.6);
+            border: 1px solid rgba(220, 230, 245, 0.5);
         }
         .nav-pills .nav-link.active {
-            background: linear-gradient(45deg, #667eea, #764ba2);
+            background: linear-gradient(45deg, #C5E1F5, #E1D5F0);
+            color: #4A5568;
+            border: 1px solid rgba(197, 225, 245, 0.8);
+        }
+        .nav-pills .nav-link:hover {
+            background: linear-gradient(45deg, #D4EDFA, #F0E6FF);
+            color: #374151;
         }
         .timer-section { 
-            background: linear-gradient(45deg, #ff6b6b, #ee5a52); 
-            color: white; 
-            padding: 20px; 
-            border-radius: 15px; 
+            background: linear-gradient(45deg, #FFD3E0, #E8C5E5); 
+            color: #6B4C57; 
+            padding: 25px; 
+            border-radius: 20px; 
             margin-top: 20px;
+            box-shadow: 0 6px 25px rgba(255, 211, 224, 0.3);
         }
         .timer-display { 
             font-size: 2.5rem; 
             font-weight: bold; 
             font-family: 'Courier New', monospace;
+            color: #8B5A6B;
         }
         .exercise-name {
-            color: #2c3e50;
+            color: #4A5568;
             font-weight: 700;
             font-size: 1.1rem;
         }
         .exercise-details {
-            color: #6c757d;
+            color: #9CA3AF;
             font-size: 0.9rem;
         }
         .video-btn {
-            background: linear-gradient(45deg, #28a745, #20c997);
+            background: linear-gradient(45deg, #B8E6B8, #A8D8A8);
             border: none;
-            border-radius: 20px;
-            color: white;
+            border-radius: 15px;
+            color: #2F7D2F;
             font-size: 0.8rem;
             font-weight: 600;
             transition: all 0.3s ease;
         }
         .video-btn:hover {
             transform: scale(1.05);
-            color: white;
+            color: #1F5F1F;
+            background: linear-gradient(45deg, #A8D8A8, #98C898);
         }
         .day-title {
-            background: linear-gradient(45deg, #667eea, #764ba2);
+            background: linear-gradient(45deg, #B8D4F0, #D1C4E9);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
             font-weight: 800;
-            font-size: 1.5rem;
+            font-size: 1.6rem;
+        }
+        .main-title {
+            color: #6B7280;
+            text-shadow: 0 2px 4px rgba(255, 255, 255, 0.8);
+        }
+        .btn-outline-primary {
+            border-color: #E1E8F0;
+            color: #6B7280;
+        }
+        .btn-outline-primary:hover {
+            background: linear-gradient(45deg, #F0F4F8, #F8FAFC);
+            border-color: #C5D2DC;
+            color: #4A5568;
+        }
+        .timer-section .btn {
+            background: rgba(255, 255, 255, 0.9);
+            color: #6B4C57;
+            border: 1px solid rgba(255, 255, 255, 0.7);
+            font-weight: 600;
+        }
+        .timer-section .btn:hover {
+            background: rgba(255, 255, 255, 1);
+            color: #5A3F4A;
+            transform: translateY(-1px);
+        }
+        .timer-section .btn-outline-light {
+            border-color: rgba(255, 255, 255, 0.7);
+            color: rgba(255, 255, 255, 0.95);
+        }
+        .timer-section .btn-outline-light:hover {
+            background: rgba(255, 255, 255, 0.2);
+            color: white;
         }
     </style>
 </head>
