--- a/index.html
+++ b/index.html
@@ -171,10 +171,10 @@
         <div class="row">
             <div class="col-12">
                 <div class="text-center mb-4">
-                    <h1 class="text-white fw-bold">
+                    <h1 class=" fw-bold">
                         <i class="fas fa-dumbbell"></i> La Mia Scheda
                     </h1>
-                    <p class="text-white-50">Programma di allenamento 3 giorni</p>
+                    <p class="">Programma di allenamento 3 giorni</p>
                 </div>
                 
                 <!-- Navigation Pills -->
