--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
             background-clip: text;
             font-weight: 800;
             font-size: 1.6rem;
+            color:#000;
         }
         .main-title {
             color: #6B7280;
