--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
         }
         .timer-section .btn {
             background: rgba(255, 255, 255, 0.9);
-            color: #6B4C57;
+            color: #6B4C57 !important;
             border: 1px solid rgba(255, 255, 255, 0.7);
             font-weight: 600;
         }
