--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
+
+        li.nav-item {
+    width: 100%;
+}
+
+li.nav-item button{
+    width: 100%;
+    margin-bottom:5px;
+}
+
+        
         body { 
             background: linear-gradient(135deg, #E8F4FD 0%, #F0E6FF 50%, #FFF0F5 100%); 
             min-height: 100vh; 
