--- a/index.html
+++ b/index.html
@@ -662,27 +662,27 @@ li.nav-item button{
         
         // Video mappings per media.musclewiki.com
         const videoMappings = {
-            'panca-piana-bilanciere': 'male/Chest/Barbell-Bench-Press/Barbell-Bench-Press',
-            'panca-inclinata-manubri': 'male/Chest/Dumbbell-Incline-Bench-Press/Dumbbell-Incline-Bench-Press',
-            'croci-panca-piana': 'male/Chest/Dumbbell-Fly/Dumbbell-Fly',
-            'lento-avanti': 'male/Shoulders/Barbell-Overhead-Press/Barbell-Overhead-Press',
-            'alzate-laterali': 'male/Shoulders/Dumbbell-Lateral-Raise/Dumbbell-Lateral-Raise',
-            'french-press': 'male/Triceps/Barbell-Lying-Triceps-Extension/Barbell-Lying-Triceps-Extension',
-            'plank': 'male/Abs/Plank/Plank',
-            'trazioni': 'male/Back/Pull-up/Pull-up',
-            'rematore': 'male/Back/Barbell-Bent-Over-Row/Barbell-Bent-Over-Row',
-            'stacco-trap-bar': 'male/Back/Trap-Bar-Deadlift/Trap-Bar-Deadlift',
-            'squat-bilanciere': 'male/Quads/Barbell-Back-Squat/Barbell-Back-Squat',
-            'affondi-manubri': 'male/Quads/Dumbbell-Lunge/Dumbbell-Lunge',
-            'calf-manubri': 'male/Calves/Dumbbell-Calf-Raise/Dumbbell-Calf-Raise',
-            'leg-raise': 'male/Abs/Leg-Raise/Leg-Raise',
-            'panca-piana-manubri': 'male/Chest/Dumbbell-Bench-Press/Dumbbell-Bench-Press',
-            'stacco-rumeno': 'male/Hamstrings/Barbell-Romanian-Deadlift/Barbell-Romanian-Deadlift',
-            'squat-frontale': 'male/Quads/Barbell-Front-Squat/Barbell-Front-Squat',
-            'trazioni-strette': 'male/Back/Close-Grip-Pull-up/Close-Grip-Pull-up',
-            'curl-manubri': 'male/Biceps/Dumbbell-Bicep-Curl/Dumbbell-Bicep-Curl',
-            'alzate-posteriori': 'male/Shoulders/Dumbbell-Rear-Delt-Fly/Dumbbell-Rear-Delt-Fly',
-            'russian-twist': 'male/Abs/Russian-Twist/Russian-Twist'
+            'panca-piana-bilanciere': 'https://youtu.be/WsRokhYnkR4?list=TLGGSi8jOVCICVkzMDA5MjAyNQ',
+            'panca-inclinata-manubri': 'https://youtu.be/1xjD8p4pyqE?list=TLGGVo1W--tJXHIzMDA5MjAyNQ',
+            'croci-panca-piana': 'https://youtu.be/C4qqdw1qvhY?list=TLGGdEVr1YfMA40zMDA5MjAyNQ',
+            'lento-avanti': 'https://youtu.be/IgC8EGv6qyQ?list=TLGGzesLuf-qmpszMDA5MjAyNQ',
+            'alzate-laterali': 'https://youtu.be/k7-yzAH598s?list=TLGGGwtO9HjAvWczMDA5MjAyNQ',
+            'french-press': 'https://youtu.be/V0K3NlIQEhM?list=TLGGA2f0M_Iv1kQzMDA5MjAyNQ',
+            'plank': 'https://youtu.be/3ECmYz2qxCQ?list=TLGGsmIBbjsPBn8zMDA5MjAyNQ',
+            'trazioni': 'https://youtu.be/bMqaIoJompM?list=TLGGstdxHrzcccEzMDA5MjAyNQ',
+            'rematore': 'https://youtu.be/9YtPy1IetfY?list=TLGGtOFe-wDNEhkzMDA5MjAyNQ',
+            'stacco-trap-bar': '',
+            'squat-bilanciere': '',
+            'affondi-manubri': '',
+            'calf-manubri': '',
+            'leg-raise': '',
+            'panca-piana-manubri': '',
+            'stacco-rumeno': '',
+            'squat-frontale': ',
+            'trazioni-strette': '',
+            'curl-manubri': '',
+            'alzate-posteriori': '',
+            'russian-twist': ''
         };
 
         // Load saved weights on page load
