--- a/index.html
+++ b/index.html
@@ -671,18 +671,18 @@ li.nav-item button{
             'plank': 'https://youtu.be/3ECmYz2qxCQ?list=TLGGsmIBbjsPBn8zMDA5MjAyNQ',
             'trazioni': 'https://youtu.be/bMqaIoJompM?list=TLGGstdxHrzcccEzMDA5MjAyNQ',
             'rematore': 'https://youtu.be/9YtPy1IetfY?list=TLGGtOFe-wDNEhkzMDA5MjAyNQ',
-            'stacco-trap-bar': '',
-            'squat-bilanciere': '',
-            'affondi-manubri': '',
-            'calf-manubri': '',
-            'leg-raise': '',
-            'panca-piana-manubri': '',
-            'stacco-rumeno': '',
-            'squat-frontale': ',
-            'trazioni-strette': '',
-            'curl-manubri': '',
-            'alzate-posteriori': '',
-            'russian-twist': ''
+            'stacco-trap-bar': 'https://youtu.be/srisx5pfbto?list=TLGGQzs2kyoX8cYzMDA5MjAyNQ',
+            'squat-bilanciere': 'https://youtu.be/wCchUJM8_ls?list=TLGGdNJoJOokabwzMDA5MjAyNQ',
+            'affondi-manubri': 'https://youtu.be/2LtokSkv45M?list=TLGGd92dEEyEx1QzMDA5MjAyNQ',
+            'calf-manubri': 'https://youtu.be/Mi5xMMjkWrg?list=TLGGVdBOo_Izy1EzMDA5MjAyNQ',
+            'leg-raise': 'https://youtu.be/tCXVvb4aaZ8?list=TLGGTvFc_xKI03czMDA5MjAyNQ',
+            'panca-piana-manubri': 'https://youtu.be/putt5zl7Rjk?list=TLGGTWp3VmWghLYzMDA5MjAyNQ',
+            'stacco-rumeno': 'https://youtu.be/JuimVqermb4?list=TLGGIHAuIiaLeG4zMDA5MjAyNQ',
+            'squat-frontale': 'https://youtu.be/DNBBbXRr7K0?list=TLGGwWh2Botma5kzMDA5MjAyNQ',
+            'trazioni-strette': 'https://youtu.be/CGjJ9DuodC0?list=TLGGV0ygRjxE2kwzMDA5MjAyNQ',
+            'curl-manubri': 'https://youtu.be/6Uu9egk8IEI?list=TLGGNN4xbgXZWdkzMDA5MjAyNQ',
+            'alzate-posteriori': 'https://youtu.be/5IZby9mv5FM?list=TLGGxrpvwmlFQJkzMDA5MjAyNQ',
+            'russian-twist': 'https://youtu.be/Evsux3PWHEA?list=TLGGgAhyUPp8AXUzMDA5MjAyNQ'
         };
 
         // Load saved weights on page load
