--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <style>
 
+        /* VIDEO ESERCIZI PRESI DA https://www.fitsw.com/exercise-list */
+
         li.nav-item {
     width: 100%;
               margin-bottom:5px;
