--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Scheda Allenamento - 3 Giorni</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <link rel="icon" href="/958576d9-c82a-4157-9702-57ea81ce0894-wm.png" sizes="32x32" type="image/png">
-    <link rel="shortcut icon" href="/958576d9-c82a-4157-9702-57ea81ce0894-wm.png">
+    <link rel="icon" href="958576d9-c82a-4157-9702-57ea81ce0894-wm.png" sizes="32x32" type="image/png">
+    <link rel="shortcut icon" href="958576d9-c82a-4157-9702-57ea81ce0894-wm.png">
 
     <style>
 
