--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ li.nav-item button{
             transform: translateY(-3px);
             box-shadow: 0 8px 25px rgba(180, 200, 235, 0.25);
             background: linear-gradient(145deg, #FFFFFF 0%, #F5F7FF 100%);
+            border: 2px solid #406d91;
         }
         .exercise-image {
             width: 60px;
