--- a/index2.html
+++ b/index2.html
@@ -268,7 +268,7 @@
     </main>
 
     <!-- BOTTOM NAVIGATION -->
-    <nav class="bg-white dark:bg-darkCard border-t border-gray-200 dark:border-gray-800 flex justify-around items-center h-16 pb-safe z-20 transition-colors duration-300">
+    <nav class="fixed bottom-0 left-0 right-0 bg-white dark:bg-darkCard border-t border-gray-200 dark:border-gray-800 flex justify-around items-center h-16 pb-safe z-20 transition-colors duration-300">
         <button onclick="app.router.go('dashboard')" class="nav-btn active flex flex-col items-center justify-center w-full h-full text-gray-400 hover:text-primary transition">
             <i class="fa-solid fa-house mb-1"></i>
             <span class="text-[10px] font-medium">Home</span>
