--- a/index2.html
+++ b/index2.html
@@ -39,7 +39,7 @@
         /* Mobile safe area */
         .pb-safe { padding-bottom: env(safe-area-inset-bottom); }
 
-        footer-action{
+        .footer-action{
             position: fixed;
     bottom: 0px;
     width: 100%;
