--- a/index2.html
+++ b/index2.html
@@ -158,7 +158,7 @@
             </div>
 
             <!-- Main Exercise Area -->
-            <div class="flex-1 overflow-y-auto p-4 flex flex-col items-center justify-center space-y-6">
+            <div class="p-10">
                 
                 <!-- Current Exercise Info -->
                 <div class="text-center w-full animate-fade-in">
@@ -180,7 +180,7 @@
                 </div>
 
                 <!-- Timer / Rest Overlay -->
-                <div id="rest-overlay" class="hidden flex-col items-center justify-center w-full py-4">
+                <div id="rest-overlay" class="hidden flex-col items-center justify-center w-full py-0">
                     <div class="relative w-48 h-48">
                          <svg class="w-full h-full transform -rotate-90">
                             <circle cx="96" cy="96" r="88" stroke="currentColor" stroke-width="8" fill="transparent" class="text-gray-800" />
