--- a/index2.html
+++ b/index2.html
@@ -315,15 +315,20 @@
                </div>
             </div>
             <div class="grid grid-cols-2 gap-4">
-               <div>
-                  <label class="text-xs text-gray-500 ml-1">Pausa (sec)</label>
-                  <input type="number" id="modal-ex-rest" value="90" class="w-full bg-gray-100 dark:bg-gray-800 rounded-lg p-3">
-               </div>
-               <div>
-                  <label class="text-xs text-gray-500 ml-1">Peso Iniziale</label>
-                  <input type="number" id="modal-ex-weight" value="0" class="w-full bg-gray-100 dark:bg-gray-800 rounded-lg p-3">
-               </div>
-            </div>
+    <div>
+        <label class="text-xs text-gray-500 ml-1">Pausa</label>
+        <select id="modal-ex-rest" class="w-full bg-gray-100 dark:bg-gray-800 rounded-lg p-3">
+            <option value="60">1 minuto</option>
+            <option value="90" selected>1:30 minuti</option>
+            <option value="120">2 minuti</option>
+            <option value="180">3 minuti</option>
+        </select>
+    </div>
+    <div>
+        <label class="text-xs text-gray-500 ml-1">Peso Iniziale</label>
+        <input type="number" id="modal-ex-weight" value="0" class="w-full bg-gray-100 dark:bg-gray-800 rounded-lg p-3">
+    </div>
+</div>
             <div class="flex items-center gap-2 bg-gray-50 dark:bg-gray-800 p-3 rounded-lg">
                <input type="checkbox" id="modal-ex-double" class="accent-primary w-5 h-5">
                <label class="text-sm">Peso doppio (2 manubri)</label>
