--- a/index2.html
+++ b/index2.html
@@ -242,12 +242,12 @@
             </div>
          </section>
          <!-- VIEW: ACTIVE WORKOUT MODE -->
-         <section id="view-active" class="view-section bg-gray-900 text-white min-h-full absolute inset-0 z-50 flex flex-col">
-		 
-		 <!-- Pulsazioni radiali animate -->
-<div class="radial-pulse"></div>
-<div class="radial-pulse"></div>
-<div class="radial-pulse"></div>
+
+<section id="view-active" class="view-section bg-gray-900 text-white min-h-full absolute inset-0 z-50 flex flex-col">
+<!-- Pulsazioni radiali animate -->
+<div class="radial-pulse" style="display: none;"></div>
+<div class="radial-pulse" style="display: none;"></div>
+<div class="radial-pulse" style="display: none;"></div>
 
 
             <!-- Active Header -->
