--- a/index2.html
+++ b/index2.html
@@ -168,7 +168,7 @@
          </div>
       </header>
       <!-- MAIN CONTENT AREA -->
-      <main id="app-container" class="flex-1 overflow-y-auto overflow-x-hidden relative hide-scrollbar pb-24">
+      <main id="app-container" class="flex-1 overflow-y-auto overflow-x-hidden relative hide-scrollbar" style="padding-bottom: 8rem;">
          <!-- VIEW: DASHBOARD (HOME) -->
          <section id="view-dashboard" class="view-section active p-4 space-y-6">
             <!-- Quick Stats Card -->
